@@ -42,6 +42,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #3248: Allow placing ScrolledText in a PanedWindow.
+
 - Issue #4574: reading an UTF16-encoded text file crashes if \r on 64-char
   boundary.
 
